feat: aggregate organization usage
